Uploaded more catpics and fixed spacing issue with profile pic

--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ footer {
   max-height: 200px;
   object-fit: cover;
   border-radius: 50%;
-  margin-bottom: 1.5rem;
+  margin-bottom: 0.75rem;
 }
 
 /* ----------------------------
